==> RT-Thread/rt-thread/bsp/nxp/mcx/mcxa/libraries/drivers/drv_can.c <==
#include <rtdevice.h>
#include "fsl_common.h"
#include "fsl_clock.h"
#include "fsl_flexcan.h"
#define TX_MB_IDX      (0)
#define RX_MB_IDX      (1)
#define RX_MB_COUNT    (1)
#define CAN_TX_WAIT_MS (2000U)

void CAN1_IRQHandler(void)
{
    rt_interrupt_enter();
    FLEXCAN_TransferHandleIRQ(CAN1, &flexcans[CAN1_INDEX].handle);
    rt_interrupt_leave();
}

static rt_err_t _can_config(struct rt_can_device *can_dev, struct can_configure *cfg)
{
    struct imxrt_can *can = (struct imxrt_can *)can_dev->parent.user_data;
    flexcan_config_t config;
    flexcan_timing_config_t timing_config;
    rt_uint32_t clk_freq;
    rt_err_t res = RT_EOK;

    can_dev->config = *cfg;
    _can_enable_periph_clock(can);
    clk_freq = CLOCK_GetFlexcanClkFreq(can->instance);
    if (clk_freq == 0U)
    {
        rt_kprintf("%s: flexcan clock is 0\n", can->name);
        return -RT_ERROR;
    }

    rt_kprintf("%s: flexcan clk=%u Hz, baud=%u\n", can->name, clk_freq, cfg->baud_rate);

    _can_safe_deinit(can);

    FLEXCAN_GetDefaultConfig(&config);
    config.baudRate = cfg->baud_rate;
    config.maxMbNum = 8;
    config.enableIndividMask = false;
    config.enableSupervisorMode = false;
    config.disableSelfReception = !_can_is_loopback(cfg);
    _can_setup_mode(&config, cfg);

    if (_can_is_loopback(cfg)
#ifdef RT_CAN_USING_CANFD
        || (cfg->enable_canfd == 0)
#endif
    )
    {
        config.enableTransceiverDelayMeasure = false;
    }
    else
    {
        config.enableTransceiverDelayMeasure = true;
    }

    rt_memset(&timing_config, 0, sizeof(flexcan_timing_config_t));

#ifdef RT_CAN_USING_CANFD
    can->fd_enabled = (cfg->enable_canfd != 0) ? RT_TRUE : RT_FALSE;

    if (can->fd_enabled)
    {
        bool brs_enable = _can_is_loopback(cfg) ? false : (cfg->baud_rate_fd > cfg->baud_rate);
        bool timing_ok;

        config.bitRateFD = _can_is_loopback(cfg) ? config.baudRate : (cfg->baud_rate_fd ? cfg->baud_rate_fd : 2000000U);

        timing_ok = FLEXCAN_FDCalculateImprovedTimingValues(can->base, config.baudRate,
                                                            config.bitRateFD, clk_freq, &timing_config);
        if (timing_ok)
        {
            rt_memcpy(&(config.timingConfig), &timing_config, sizeof(flexcan_timing_config_t));
        }

        FLEXCAN_FDInit(can->base, &config, clk_freq, kFLEXCAN_16BperMB, brs_enable);
        if (!timing_ok)
        {
            if (FLEXCAN_SetFDBitRate(can->base, clk_freq, config.baudRate, config.bitRateFD) != kStatus_Success)
            {
                rt_kprintf("%s: CAN FD timing setup failed, clk=%u\n", can->name, clk_freq);
                return -RT_ERROR;
            }
        }
    }
    else
#endif
    {
        if (FLEXCAN_CalculateImprovedTimingValues(can->base, config.baudRate, clk_freq, &timing_config))
        {
            rt_memcpy(&(config.timingConfig), &timing_config, sizeof(flexcan_timing_config_t));
        }

        FLEXCAN_Init(can->base, &config, clk_freq);
    }

    can->filter_mask = 0;
    FLEXCAN_TransferCreateHandle(can->base, &can->handle, flexcan_callback, can);
    if (_can_is_loopback(cfg))
    {
        _can_setup_loopback_mb(can);
    }
    else
    {
        _can_start_rx(can);
    }
    _can_enable_controller_irq(can);

    return res;
}

static rt_err_t _can_control(struct rt_can_device *can_dev, int cmd, void *arg)
{
    struct imxrt_can *can;
    rt_uint32_t argval, mask;
    rt_err_t res = RT_EOK;
    flexcan_rx_mb_config_t mbConfig;
    struct rt_can_filter_config *cfg;
    struct rt_can_filter_item *item;
    rt_uint8_t i, count, index;

    RT_ASSERT(can_dev != RT_NULL);

    can = (struct imxrt_can *)can_dev->parent.user_data;
    RT_ASSERT(can != RT_NULL);

    switch (cmd)
    {
    case RT_DEVICE_CTRL_SET_INT:
        argval = (rt_uint32_t)arg;
        if (argval == RT_DEVICE_FLAG_INT_RX || argval == RT_DEVICE_FLAG_INT_TX ||
            argval == RT_DEVICE_CAN_INT_ERR)
        {
            _can_enable_controller_irq(can);
        }
        else
        {
            res = -RT_ERROR;
        }
        break;
    case RT_DEVICE_CTRL_CLR_INT:
        DisableIRQ(can->irqn);
        break;
    case RT_CAN_CMD_SET_FILTER:
        cfg = (struct rt_can_filter_config *)arg;
        item = cfg->items;
        count = cfg->count;

        if (can->filter_mask == 0xffffffff)
        {
            rt_kprintf("%s filter is full!\n", can->name);
            res = -RT_ERROR;
            break;
        }
        else if (can->filter_mask == 0)
        {
            for (i = 0; i < RX_MB_COUNT; i++)
            {
#ifdef RT_CAN_USING_CANFD
                if (can->fd_enabled)
                {
                    FLEXCAN_SetFDRxMbConfig(can->base, i + 1, RT_NULL, false);
                }
                else
#endif
                {
                    FLEXCAN_SetRxMbConfig(can->base, i + 1, RT_NULL, false);
                }
            }
        }

        while (count)
        {
            if (item->ide)
            {
                mbConfig.format = kFLEXCAN_FrameFormatExtend;
                mbConfig.id = FLEXCAN_ID_EXT(item->id);
                mask = FLEXCAN_RX_MB_EXT_MASK(item->mask, 0, 0);
            }
            else
            {
                mbConfig.format = kFLEXCAN_FrameFormatStandard;
                mbConfig.id = FLEXCAN_ID_STD(item->id);
                mask = FLEXCAN_RX_MB_STD_MASK(item->mask, 0, 0);
            }

            mbConfig.type = item->rtr ? kFLEXCAN_FrameTypeRemote : kFLEXCAN_FrameTypeData;

            if (item->hdr_bank == -1)
            {
                for (i = 0; i < 32; i++)
                {
                    if (!(can->filter_mask & (1 << i)))
                    {
                        index = i;
                        break;
                    }
                }
            }
            else
            {
                if (can->filter_mask & (1 << item->hdr_bank))
                {
                    res = -RT_ERROR;
                    rt_kprintf("%s hdr%d filter already set!\n", can->name, item->hdr_bank);
                    break;
                }
                index = item->hdr_bank;
            }

            FLEXCAN_SetRxIndividualMask(can->base, index + 1, mask);
#ifdef RT_CAN_USING_CANFD
            if (can->fd_enabled)
            {
                FLEXCAN_SetFDRxMbConfig(can->base, index + 1, &mbConfig, true);
            }
            else
#endif
            {
                FLEXCAN_SetRxMbConfig(can->base, index + 1, &mbConfig, true);
            }
            can->filter_mask |= 1 << index;

            item++;
            count--;
        }
        break;

    case RT_CAN_CMD_SET_BAUD:
        argval = (rt_uint32_t)arg;
        if (argval != 0)
        {
            can->can_dev.config.baud_rate = argval;
            res = _can_config(can_dev, &can->can_dev.config);
        }
        else
        {
            res = -RT_ERROR;
        }
        break;
    case RT_CAN_CMD_SET_MODE:
        argval = (rt_uint32_t)arg;
        if (argval > RT_CAN_MODE_LOOPBACKANLISTEN)
        {
            res = -RT_ERROR;
            break;
        }
        can->can_dev.config.mode = argval;
        res = _can_config(can_dev, &can->can_dev.config);
        break;
#ifdef RT_CAN_USING_CANFD
    case RT_CAN_CMD_SET_CANFD:
        argval = (rt_uint32_t)arg;
        can->can_dev.config.enable_canfd = argval ? 1 : 0;
        res = _can_config(can_dev, &can->can_dev.config);
        break;
    case RT_CAN_CMD_SET_BAUD_FD:
        argval = (rt_uint32_t)arg;
        if (argval != 0)
        {
            can->can_dev.config.baud_rate_fd = argval;
            res = _can_config(can_dev, &can->can_dev.config);
        }
        else
        {
            res = -RT_ERROR;
        }
        break;
#endif
    case RT_CAN_CMD_SET_PRIV:
        res = -RT_ERROR;
        break;
    case RT_CAN_CMD_GET_STATUS:
        FLEXCAN_GetBusErrCount(can->base, (rt_uint8_t *)(&can->can_dev.status.snderrcnt),
                               (rt_uint8_t *)(&can->can_dev.status.rcverrcnt));
        rt_memcpy(arg, &can->can_dev.status, sizeof(can->can_dev.status));
        break;
    case RT_CAN_CMD_START:
        break;
    default:
        res = -RT_ERROR;
        break;
    }

    return res;
}

static rt_ssize_t _can_sendmsg(struct rt_can_device *can_dev, const void *buf, rt_uint32_t boxno)
{
    struct imxrt_can *can;
    struct rt_can_msg *msg;
    status_t ret = kStatus_Fail;
    rt_uint8_t hw_mb = TX_MB_IDX;

    RT_ASSERT(can_dev != RT_NULL);
    RT_ASSERT(buf != RT_NULL);

    can = (struct imxrt_can *)can_dev->parent.user_data;
    msg = (struct rt_can_msg *)buf;
    RT_UNUSED(boxno);

    if (!_can_is_loopback(&can_dev->config))
    {
        _can_recover_bus(can);
    }

    if (!_can_is_loopback(&can_dev->config))
    {
        _can_abort_rx(can);
    }
    else
    {
        _can_setup_loopback_mb(can);
    }

#ifdef RT_CAN_USING_CANFD
    if (can->fd_enabled && msg->fd_frame)
    {
        flexcan_fd_frame_t tx_frame;

        FLEXCAN_ClearMbStatusFlags(can->base, ((uint64_t)1U << hw_mb) | ((uint64_t)1U << RX_MB_IDX));
        FLEXCAN_SetFDTxMbConfig(can->base, hw_mb, true);
        _can_fill_fd_frame(&tx_frame, msg);

        if (FLEXCAN_WriteFDTxMb(can->base, hw_mb, &tx_frame) != kStatus_Success)
        {
            ret = kStatus_Fail;
        }
        else
        {
            ret = _can_wait_mb_tx_done(can, hw_mb);
        }

        if (ret == kStatus_Success && _can_is_loopback(&can_dev->config))
        {
            ret = _can_wait_mb_rx_done(can->base, RX_MB_IDX);
            if (ret == kStatus_Success)
            {
                ret = FLEXCAN_ReadFDRxMb(can->base, RX_MB_IDX, &can->framefd[0]);
                if (ret == kStatus_Success)
                {
                    _can_loopback_post_rx(can);
                }
            }
        }
    }
    else
#endif
    {
        flexcan_frame_t tx_frame;

        FLEXCAN_ClearMbStatusFlags(can->base, ((uint64_t)1U << hw_mb) | ((uint64_t)1U << RX_MB_IDX));
        FLEXCAN_SetTxMbConfig(can->base, hw_mb, true);
        _can_fill_classic_frame(&tx_frame, msg);

        if (FLEXCAN_WriteTxMb(can->base, hw_mb, &tx_frame) != kStatus_Success)
        {
            ret = kStatus_Fail;
        }
        else
        {
            ret = _can_wait_mb_tx_done(can, hw_mb);
        }

        if (ret == kStatus_Success && _can_is_loopback(&can_dev->config))
        {
            ret = _can_wait_mb_rx_done(can->base, RX_MB_IDX);
            if (ret == kStatus_Success)
            {
                ret = FLEXCAN_ReadRxMb(can->base, RX_MB_IDX, &can->frame[0]);
                if (ret == kStatus_Success)
                {
                    _can_loopback_post_rx(can);
                }
            }
        }
    }

    if (ret == kStatus_Success)
    {
        if (!_can_is_loopback(&can_dev->config))
        {
            _can_start_rx(can);
        }

        rt_hw_can_isr(&can->can_dev, RT_CAN_EVENT_TX_DONE | boxno << 8);
        return RT_EOK;
    }

    if (ret == kStatus_Timeout)
    {
        _can_dump_err(can, "tx fail");
    }

    return -RT_ERROR;
}

static rt_ssize_t _can_recvmsg(struct rt_can_device *can_dev, void *buf, rt_uint32_t boxno)
{
    struct imxrt_can *can;
    struct rt_can_msg *pmsg;
    rt_uint8_t index;

    RT_ASSERT(can_dev != RT_NULL);

    can = (struct imxrt_can *)can_dev->parent.user_data;
    pmsg = (struct rt_can_msg *)buf;
    index = (boxno >= RX_MB_IDX) ? (boxno - RX_MB_IDX) : 0;

#ifdef RT_CAN_USING_CANFD
    if (can->fd_enabled && can->framefd[index].edl)
    {
        _can_parse_fd_frame(pmsg, &can->framefd[index]);
    }
    else if (can->fd_enabled)
    {
        _can_parse_classic_frame(pmsg, (const flexcan_frame_t *)&can->framefd[index]);
        pmsg->fd_frame = 0;
        pmsg->brs = 0;
    }
    else
#endif
    {
        _can_parse_classic_frame(pmsg, &can->frame[index]);
    }

    pmsg->hdr_index = index;

    return 0;
}

int rt_hw_can_init(void)
{
    int i;
    rt_err_t ret = RT_EOK;
    struct can_configure config = CANDEFAULTCONFIG;

    config.privmode = 0;
    config.ticks = 50;
    config.sndboxnumber = 1;
    config.msgboxsz = RX_MB_COUNT;
#ifdef RT_CAN_USING_HDR
    config.maxhdr = RX_MB_COUNT;
#endif
#ifdef RT_CAN_USING_CANFD
    config.enable_canfd = 1;
    config.baud_rate_fd = 2000000;
#endif

    for (i = 0; i < sizeof(flexcans) / sizeof(flexcans[0]); i++)
    {
        flexcans[i].can_dev.config = config;
        flexcans[i].filter_mask = 0;
        _can_enable_periph_clock(&flexcans[i]);

        ret = rt_hw_can_register(&flexcans[i].can_dev, flexcans[i].name, &imxrt_can_ops, &flexcans[i]);
    }

    return ret;
}
